Fixed comments
* Removed extra margin from buttons
* Fixed radio button alignment
* Added a question mark to question text
* Added a condition to disable the delete data button

--- a/src/app/shared/styles/create-form.scss
+++ b/src/app/shared/styles/create-form.scss
@@ -113,12 +113,12 @@ button:focus {
 }
 
 .mat-chip-list ::ng-deep .mat-chip {
-  span{
+  span {
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 210px;
   }
-  .mat-icon{
+  .mat-icon {
     overflow: visible;
   }
 }
@@ -226,5 +226,9 @@ button:focus {
 }
 
 .addChild {
-  margin: 2rem 0;
+  margin-bottom: 1rem;
+}
+
+.removeChild {
+  margin: 1rem 0;
 }
